Clases/Clase 4/snippets/deployment-v3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingapp
  labels:
    app: pingapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pingapp
  template:
    metadata:
      labels:
        app: pingapp
    spec:
      containers:
      - name: pingapp
        image: nicopaez/pingapp:3.0.0
        ports:
        - containerPort: 4567
        volumeMounts:
          - name: config-files
            mountPath: /config
      volumes:
        - name: config-files
          configMap:
            name: "pingapp-config-files"
            items:
            - key: "config.json"
              path: "config.json"
