Clases/Clase 4/snippets/service-okteto.yaml
kind: Service
apiVersion: v1
metadata:
  name: pingapp
  labels:
    app: pingapp
  annotations:
    dev.okteto.com/auto-ingress: "true"
spec:
  selector:
    app: pingapp
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 4567
