Clases/Clase 4/snippets/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: pingapp.local
    http:
      paths:
      - path: /pingapp
        pathType: Prefix
        backend:
          service:
            name: pingapp
            port:
              number: 8080
